force-app/main/default/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Duration_in_Hours__c</fullName>
        <label>Duration in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Work Order</label>
    <nameField>
        <label>Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>